--- a/public/css/main.css
+++ b/public/css/main.css
@@ -680,6 +680,151 @@ main .transacciones h2{
   margin-top:80px;
   margin-left: 550px;
 }
+/*Configuración*/
+main{
+  width: 95%;
+  height: auto;
+  margin:auto;
+  padding: 1%;
+  margin-bottom: 30px;
+  border-radius: 26px;
+  text-align: center;
+}
+main h1 {
+  font-family: var(--tipo-principal);
+  color: #000;
+  font-weight: 500;
+  font-size: 20px;
+}
+main .lineaR {
+  border: 1px solid #FC003C;
+  width: 5%;
+  margin: auto;
+}
+.loadphoto {
+  width: 200px;
+  height: auto;
+  margin:auto;
+  padding: 15px;
+}
+.loadphoto img {
+  width: 70%;
+  height: 70%;
+}
+.contenedor-btn-file input[type="file"] {
+  appearance: none;
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+}
+.contenedor-btn-file input[type="submit"] {
+  appearance: none;
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+}
+.contenedor-btn-file {
+  display: inline-block;
+  position: relative;
+  background: linear-gradient(90deg, rgba(32,35,109,1) 0%, rgba(252,0,60,1) 100%);
+  color: #fff;
+  border: 0;
+  padding: 10px;
+  border-radius: 30px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, .15);
+  overflow: hidden;
+  transition: ease-out 120ms background-color;
+  margin-top: 20px;
+  left: 30px;
+}
+.contenedor-btn-f{
+  display: inline-block;
+  position: relative;
+  background: rgba(177, 175, 175, 0.44);
+  color: #4b4b4b;
+  border: 0;
+  padding: 10px;
+  border-radius: 30px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, .15);
+  overflow: hidden;
+  transition: ease-out 120ms background-color;
+  margin-top: 20px;
+  left: 10px;
+}
+.bloque a{
+  text-align: center;
+  position: absolute;
+  margin-left:150px;
+}
+.contenedor-btn-f label{
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 50px;
+  cursor: pointer;
+}
+.contenedor-btn-file label {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  left: 50px;
+  cursor: pointer;
+}
+.contenedor-formulario {
+  width: 95%;
+  height: auto;
+  margin: auto;
+  margin-top: 40px;
+}
+form {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 50px;
+  row-gap: 30px;
+  align-items: center;
+  justify-content: center;
+}
+.labels {
+  font-size: 20px;
+  color: #000;
+  font-family: 'Roboto';
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+.inputs {
+  width: 100%;
+  padding: 7px 10px;  
+  border-color: #5e3a3a;
+  outline: 0 none;
+  border-radius: 30px;
+  border: 3px solid #B1AFAF;
+  color: #fff;
+  font-family: 'Roboto';
+}
+.center {
+  text-align: center;
+}
+.di {
+  grid-row: 3/4;
+  grid-column: 2/4;
+}
+.bloque {
+  line-height: 10px;
+}
+.lineaF {
+  border: 1px solid #FC003C;
+  width: 15%;
+  margin: auto;
+  margin-bottom: 15px;
+}
 @media screen and (max-width:768px){
 
     .header .button{
