--- a/public/css/main.css
+++ b/public/css/main.css
@@ -690,16 +690,25 @@ main{
   border-radius: 26px;
   text-align: center;
 }
-main h1 {
+main h1{
   font-family: var(--tipo-principal);
   color: #000;
   font-weight: 500;
   font-size: 20px;
+  margin-bottom: 10px;
+}
+main h2{
+  font-family: var(--tipo-principal);
+  color: #000;
+  font-weight: 500;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 main .lineaR {
   border: 1px solid #FC003C;
   width: 5%;
   margin: auto;
+  margin-bottom: 20px;
 }
 .loadphoto {
   width: 200px;
@@ -710,6 +719,10 @@ main .lineaR {
 .loadphoto img {
   width: 70%;
   height: 70%;
+}
+.loadphoto p{
+  color:#8B8B8B;
+  margin-top:5px;
 }
 .contenedor-btn-file input[type="file"] {
   appearance: none;
@@ -736,8 +749,8 @@ main .lineaR {
   box-shadow: 0 0 12px rgba(0, 0, 0, .15);
   overflow: hidden;
   transition: ease-out 120ms background-color;
-  margin-top: 20px;
-  left: 30px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 .contenedor-btn-f{
   display: inline-block;
@@ -751,12 +764,13 @@ main .lineaR {
   overflow: hidden;
   transition: ease-out 120ms background-color;
   margin-top: 20px;
-  left: 10px;
+  margin-left:-20px;
 }
-.bloque a{
+.bloque1 {
   text-align: center;
   position: absolute;
-  margin-left:150px;
+  margin-top: 450px;
+  margin-left:550px;
 }
 .contenedor-btn-f label{
   display: block;
@@ -765,7 +779,6 @@ main .lineaR {
   height: 100%;
   z-index: 1;
   top: 0;
-  left: 50px;
   cursor: pointer;
 }
 .contenedor-btn-file label {
@@ -775,7 +788,6 @@ main .lineaR {
   height: 100%;
   z-index: 1;
   top: 0;
-  left: 50px;
   cursor: pointer;
 }
 .contenedor-formulario {
@@ -795,8 +807,8 @@ form {
 .labels {
   font-size: 20px;
   color: #000;
-  font-family: 'Roboto';
-  font-weight: 900;
+  font-family: var(--tipo-principal);
+  font-weight: 500;
   margin-bottom: 10px;
 }
 .inputs {
@@ -807,7 +819,7 @@ form {
   border-radius: 30px;
   border: 3px solid #B1AFAF;
   color: #fff;
-  font-family: 'Roboto';
+  font-family: var(--tipo-principal);
 }
 .center {
   text-align: center;
