--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -367,7 +367,9 @@ form.sign-up-form{
     color: #696969;
     margin-bottom: 10px;
 }
-.input-field{
+/*LOGIN INPUTS*/
+
+.input-field-email{
     max-width: 380px;
     width: 100%;
     height: 55px;
@@ -378,13 +380,13 @@ form.sign-up-form{
     grid-template-columns: 15% 85%;
     padding: 0 .4rem;
 }
-.input-field i{
+.input-field-email i{
   text-align: center;
   line-height: 55px;
   color: #808080;
   font-size:1.1rem; 
 }
-.input-field input{
+.input-field-email input{
     background: none;
     outline: none;
     border: none;
@@ -393,10 +395,88 @@ form.sign-up-form{
     font-size: 1.1rem;
     color: #333;
 }
-.input-field input::placeholder{
+.input-field-email input::placeholder{
     color: #aaa;
     font-weight: 500;
 }
+.input-field-password{
+    max-width: 380px;
+    width: 100%;
+    height: 55px;
+    background-color: #f0f0f0;
+    margin: 10px 0;
+    border-radius: 55px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding: 0 .4rem;
+}
+.input-field-password i{
+  text-align: center;
+  line-height: 55px;
+  color: #808080;
+  font-size:1.1rem; 
+}
+.input-field-password input{
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 400;
+    font-size: 1.1rem;
+    color: #333;
+}
+.input-field-password input::placeholder{
+    color: #aaa;
+    font-weight: 500;
+}
+/*VALIDATE COLOR*/
+.input-incorrect{
+    background-color: rgba(255, 1, 1, 0.58);
+}
+
+.input-correct{
+    background-color: rgba(152, 255, 35, 0.63);
+}
+.formulario__input {
+	width: 100%;
+	background: #fff;
+	border: 3px solid transparent;
+	border-radius: 3px;
+	height: 45px;
+	line-height: 45px;
+	padding: 0 40px 0 10px;
+	transition: .3s ease all;
+}
+
+.formulario__input:focus {
+	border: 3px solid #0075FF;
+	outline: none;
+	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+}
+
+.formulario-input-error {
+	font-size: 12px;
+	margin-bottom: 0;
+	display: none;
+}
+
+.formulario-input-error-activo {
+	display: block;
+}
+.formulario-mensaje {
+	font-size: 12px;
+	margin-bottom: 0;
+	display: none;
+}
+
+.formulario-mensaje-activo {
+	display: block;
+}
+
+
+
+
+
 .btn{
     width: 150px;
     height: 49px;
