--- a/public/css/main.css
+++ b/public/css/main.css
@@ -634,9 +634,9 @@ main .transacciones h2{
   width: 1202px;
   height: 343px;
   margin-left: 75px;
-  margin-top: 8px;
+  margin-top: 100px;
 
-  background: linear-gradient(174deg, rgba(32, 35, 109, 0.76) -2.21%, rgba(252, 0, 60, 0.49) 113.49%);
+ 
   border-radius: 35px;
 }
 .pregunt p{
@@ -647,38 +647,78 @@ main .transacciones h2{
   top:100px;
   left:40px;
 }
-.quest{
-  position: absolute;
-  width: 564px;
-  height: 442px;
-  left: 700px;
-  top: 200px;
-
-  background-image: url("../img/question.png");
+.acordeon{
+  width: 1190px;
+  border-radius: 1.5rem;
+  margin-left: 10px;
+  margin-top: 8px;
 }
-.dettxt{
-  position: absolute;
-  flex-direction: row;
+.acordeon-it{
+  font-family: var(--tipo-secundaria);
+  background:linear-gradient(174deg, rgba(32, 35, 109, 0.76) -2.21%, rgba(252, 0, 60, 0.49) 113.49%);
+  border-radius: 2rem;
+  margin-bottom: .5rem;
+  padding:0 1rem 1rem;
+  box-shadow: .5rem 2px 1rem rgba(255, 130, 159, 0.49);
+}
+.acordeon-link {
   color:white;
   font-family: var(--tipo-principal);
-  margin-left: 200px;
-  margin-top:60px;
+  font-size:1.5rem;
+  text-decoration: none;
+  
+  background-color:transparent;
+  width: 100%;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding: 1rem 0;
 }
-.dettxt1{
-  position: absolute;
-  flex-direction: row;
+.acordeon a:hover{
   color:white;
-  font-family: var(--tipo-principal);
-  margin-left: 800px;
-  margin-top:60px;
 }
-.det2{
-  font-family: var(--tipo-principal);
-  color: white;
-  position: absolute;
-  text-align: center;
-  margin-top:80px;
-  margin-left: 550px;
+.acordeon-link i{
+  color: aliceblue;
+  padding: .5rem;
+}
+.acordeon-link .fa-caret-up{
+  display:none;
+}
+.resp{
+  max-height: 0;
+  overflow:hidden;
+  position:relative;
+  border-radius: 1rem;
+  background-color: rgba(251, 251, 251, 0.254);
+  transition: 750ms;
+}
+.resp::before{
+  content: "";
+  position:absolute;
+  width: .4rem;
+  height:100%;
+  background-color: rgb(239, 213, 218);
+  top:50%;
+  left:0;
+  transform: translateY(-50%);
+}
+.resp p{
+  color: rgba(9, 9, 9, 0.797);
+  font-size: 1.2rem;
+  font-family: var(--tipo-secundaria);
+  top: 8px;
+  left: 15px;
+  right: 15px;
+  bottom: 10px;
+}
+.acordeon-it:target .resp{
+  max-height: 10rem;
+}
+.acordeon-it:target .acordeon-link .fa-caret-down{
+  display: none;
+}
+.acordeon-it::target .acordeon-link .fa-caret-up{
+  display:block;
 }
 /*Configuración*/
 main{
