--- a/public/css/mainEjecutive.css
+++ b/public/css/mainEjecutive.css
@@ -495,6 +495,14 @@ form {
   color: #fff;
 }
 
+.formulario-modal {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 20px;
+  padding: 20px;
+}
+
+
 /* LOADER*/
 .contenedor-loader.visible{
   display: block;
