--- a/public/css/main.css
+++ b/public/css/main.css
@@ -145,12 +145,13 @@ nav a:hover{
     border: 1px solid rgba(138, 138, 138, 0.35);
 }
 .header{
-  margin: 1% 5%;
+    margin: 1% 5%;
     background-color: #ffffff;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     color:#9A9A9A; 
+    justify-content: center;
 }
 .header .h1{
     font-family: 'Radio Canada', sans-serif;
@@ -415,7 +416,7 @@ main .transacciones h2{
   width: 1159px;
   height: 253px;
   top: 150px;
-  left: 80px;
+  left: 126px;
 
   background: linear-gradient(270deg, rgba(252, 0, 60, 0.42)-12.08%, rgba(5, 0, 252, 0.62) 24.26%, #FFB8B8 108.23%);
   border-radius: 24px;
@@ -493,9 +494,9 @@ main .transacciones h2{
 }
 .detalles{
   position: absolute;
-  max-width:1108px;
-  max-height: 310px;
-  left: 80px;
+  width:1108px;
+  height: 310px;
+  left: 114px;
   top: 430px;
 }
 .detalles h2{
@@ -608,7 +609,7 @@ main .transacciones h2{
   position: absolute;
   width: 1200px;
   height: 75px;
-  left: 50px;
+  left: 77px;
   top: 120px;
 
   background: linear-gradient(90.85deg, rgba(32, 35, 109, 0.63) 3.56%, rgba(252, 0, 60, 0.62) 96.97%);
@@ -633,10 +634,10 @@ main .transacciones h2{
   position:static;
   width: 1202px;
   height: 343px;
-  margin-left: 50px;
-  margin-top: 100px;
+  margin-left: 75px;
+  margin-top: 8px;
 
- 
+  background: linear-gradient(174deg, rgba(32, 35, 109, 0.76) -2.21%, rgba(252, 0, 60, 0.49) 113.49%);
   border-radius: 35px;
 }
 .pregunt p{
@@ -647,78 +648,38 @@ main .transacciones h2{
   top:100px;
   left:40px;
 }
-.acordeon{
-  width: 1190px;
-  border-radius: 1.5rem;
-  margin-left: 10px;
-  margin-top: 8px;
+.quest{
+  position: absolute;
+  width: 564px;
+  height: 442px;
+  left: 700px;
+  top: 200px;
+
+  background-image: url("../img/question.png");
 }
-.acordeon-it{
-  font-family: var(--tipo-secundaria);
-  background:linear-gradient(174deg, rgba(32, 35, 109, 0.76) -2.21%, rgba(252, 0, 60, 0.49) 113.49%);
-  border-radius: 2rem;
-  margin-bottom: .5rem;
-  padding:0 1rem 1rem;
-  box-shadow: .5rem 2px 1rem rgba(255, 130, 159, 0.49);
-}
-.acordeon-link {
+.dettxt{
+  position: absolute;
+  flex-direction: row;
   color:white;
   font-family: var(--tipo-principal);
-  font-size:1.5rem;
-  text-decoration: none;
-  
-  background-color:transparent;
-  width: 100%;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding: 1rem 0;
+  margin-left: 200px;
+  margin-top:60px;
 }
-.acordeon a:hover{
+.dettxt1{
+  position: absolute;
+  flex-direction: row;
   color:white;
+  font-family: var(--tipo-principal);
+  margin-left: 800px;
+  margin-top:60px;
 }
-.acordeon-link i{
-  color: aliceblue;
-  padding: .5rem;
-}
-.acordeon-link .fa-caret-up{
-  display:none;
-}
-.resp{
-  max-height: 0;
-  overflow:hidden;
-  position:relative;
-  border-radius: 1rem;
-  background-color: rgba(251, 251, 251, 0.254);
-  transition: 750ms;
-}
-.resp::before{
-  content: "";
-  position:absolute;
-  width: .4rem;
-  height:100%;
-  background-color: rgb(239, 213, 218);
-  top:50%;
-  left:0;
-  transform: translateY(-50%);
-}
-.resp p{
-  color: rgba(9, 9, 9, 0.797);
-  font-size: 1.2rem;
-  font-family: var(--tipo-secundaria);
-  top: 8px;
-  left: 15px;
-  right: 15px;
-  bottom: 10px;
-}
-.acordeon-it:target .resp{
-  max-height: 10rem;
-}
-.acordeon-it:target .acordeon-link .fa-caret-down{
-  display: none;
-}
-.acordeon-it::target .acordeon-link .fa-caret-up{
-  display:block;
+.det2{
+  font-family: var(--tipo-principal);
+  color: white;
+  position: absolute;
+  text-align: center;
+  margin-top:80px;
+  margin-left: 550px;
 }
 /*Configuración*/
 main{
