--- a/public/css/mainEjecutive.css
+++ b/public/css/mainEjecutive.css
@@ -443,6 +443,7 @@ main .lineaR {
   font-size: 20px;
   color: #fff;
   background-color: #687b83;
+  width: 100%;
 }
 
 .encabezado_clientes td {
@@ -451,9 +452,8 @@ main .lineaR {
 
 .lista_clientes {
   color: #868AF1;
-  padding: 5px 0px 5px 0px;
+  padding:8px 0px 8px 0px;
 }
-
 .buttons_clientes {
   display: flex;
   font-size: 16px;
@@ -502,6 +502,47 @@ main .lineaR {
   grid-template-columns: 50% 50%;
   gap: 20px;
   padding: 20px;
+}
+.verde {
+  color: #27a644;
+}
+.rojo {
+  color: #aa0a00;
+}
+/* Más acciones */
+
+.bloque_másInfo {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 20px;
+  padding: 20px;
+}
+.info_modal {
+  background-color: #27a644;
+  color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+}
+.L {
+  grid-column: 1/3;
+}
+.L2 {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+.pdf {
+  background-color: #aa0a00;
+  color: #fff;
+  padding: 10px 25px;
+  border-radius: 5px;
+  transition: all .5s;
+  cursor: pointer;
+}
+.aprobado {
+  border: solid 2px #27a644;
+  padding: 5px;
+  border-radius: 5px;
+  color: #27a644;
 }
 
 
