Se termino la versión 1 del ejecutivo
Todo el diseño del Ejecutivo está finalizado

--- a/public/css/mainEjecutive.css
+++ b/public/css/mainEjecutive.css
@@ -101,12 +101,12 @@ form, input, textarea, button, label {
 
 
 body {
-  min-height: 100vh;
-  font-size: 100%;
+  /* min-height: 100vh;
+  font-size: 100%; */
   font-family: var(--tipo-principal);
-  font-smooth: always;
+  /* font-smooth: always;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 .logo{
   height: 50px;
@@ -117,7 +117,6 @@ nav {
   left: 0;
   width: 100%;
   background-color: #2f2f2f;
-  z-index: 1;
   padding: 5px;
 }
 nav:after{
@@ -214,9 +213,8 @@ main{
     flex-direction: column;
     width: 95%;
     height: auto;
-    margin: 90px auto;
+    margin: 90px auto 0px;
     padding: 1%;
-    margin-bottom: 30px;
     background-color: #212121;
     border-radius: 26px;
     text-align: center;
@@ -385,7 +383,9 @@ main .lineaR {
 .infocliente {
   text-align: left;
   margin-left: 4rem;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.726);
+  font-family: 'Rajdhani';
+  font-weight: bold;
 }
 .buscar {
   position: absolute;
@@ -550,6 +550,88 @@ main .lineaR {
   color: #27a644;
 }
 
+/* DEPOSITOS Y RETIROS */
+.movimientos {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 50px;
+  width: 90%;
+  margin: 20px auto ;
+  height: auto;
+}
+.depositos {
+  background-color: #98b275;
+  width: 100%;
+  height: auto;
+  border-radius:30px;
+  padding: 10px;
+}
+.retiros {
+  background-color: #f15759;
+  width: 100%;
+  height: auto;
+  border-radius: 30px;
+  padding: 10px;
+}
+.movimientos {
+  line-height: 30px;
+}
+.titulo {
+  font-family: Rajdhani;
+  font-size: 30px;
+}
+.movimientos input {
+  width: 80%;
+  height: 40px;
+  border-radius: 30px;
+  background-color: #ECF0F1;
+  margin: auto;
+  text-align: center;
+  font-family: 'Rajdhani', 'Roboto';
+  font-size: 20px;
+  font-weight: bold;
+  color: #2d2d2d;
+}
+.movimientos label {
+  font-family: 'Rajdhani';
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+.movimientos h3{
+  font-family: 'Rajdhani';
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+.movimientos p {
+  color: #2d2d2d;
+  font-family: 'Rajdhani';
+  font-weight: bold;
+  font-size: 20px;
+}
+#depositar {
+  background-color: #27a644;
+  padding: 15px;
+  margin: 10px auto;
+  color: #fff;
+  border-radius: 10px;
+  font-family: 'Rajdhani';
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
+}
+#retirar {
+  background-color: #e63821;
+  padding: 15px;
+  margin: 10px auto;
+  color: #fff;
+  border-radius: 10px;
+  font-family: 'Rajdhani';
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
+}
 
 /* LOADER*/
 .contenedor-loader.visible{
