--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -75,17 +75,20 @@ nav ul li a:hover{
     font-weight: 500;
     margin: 30px 0;
 }
-button{
+.button{
     width: 140px;
+    font-size: 16px;
     border: 0;
-    padding: 12px 10px;
+    padding: 10px 25px;
     outline: none;
     color: #fff;
     background: linear-gradient(to right, #20236D, #FA4848);
     border-radius: 20px;
     cursor: pointer;
+    text-decoration: none;
+    color: white;
 }
-button a{
+button a {
     text-decoration: none;
     color: white;
 }
