--- a/public/css/mainClient.css
+++ b/public/css/mainClient.css
@@ -107,6 +107,7 @@ nav {
   width: 100%;
   background-color: #fff;
   padding: 5px;
+  z-index: 1;
 }
 nav:after{
   content: '';
@@ -564,26 +565,66 @@ main {
 /* FIN MAIN */
 
 /* PRESTAMOS  */
+.disabled {
+  display: none;
+}
 
+.bannerPrestamo {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  width: 90%;
+  height: 100%;
+  margin: auto;
+  column-gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  /* background-color: #000; */
+}
+.pText {
+  background: linear-gradient(312deg, rgba(231,76,60,0.58) 0%, rgba(239,169,43,0.67) 100%);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+  font-family: 'Roboto';
+  font-size: 18px;
+  text-align: center;
+  border-radius: 10px;
+  padding: .5rem;
+}
 /* MODAL SIMULADOR  */
 
 .hero__cta{
-  text-decoration: none;
-  color: rgb(71, 51, 51);
-  padding: 15px 60px;
-  border: 1px solid;
-  border-radius: 6px;
+  background:#20236d;
+  color: #fff;
   display: inline-block;
-  font-weight: 500;
-  transition: background-color .3s;
+  border-radius: 10px;
+  padding: .5rem;
+  height: 100%;
+  width: 100%;
+  font-size: 20px;
+  text-decoration: none;
+  text-align: center;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+  animation: pulse 1.5s infinite;
+  font-family: 'Roboto';
+}
+@keyframes pulse {
+  0% {
+    transform: scale(.99);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+  }
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+  100% {
+    transform: scale(.99);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 
-.hero__cta:hover{
-  background-color: #fff;
-  color: #1e3c72;
-}
-
- .modal1{
+.modal1{
   position: fixed;
   top: 0;
   left: 0;
@@ -623,22 +664,7 @@ main {
 }
 
 
-.modal__close{
-  text-decoration: none;
-  color: #fff;
-  background-color: #F26250;
-  padding: 1em 3em;
-  border: 1px solid ;
-  border-radius: 6px;
-  display: inline-block;
-  font-weight: 300;
-  transition: background-color .3s;
-}
 
-.modal__close:hover{
-  color: #F26250;
-  background-color: #fff;
-}
 .thT {
   text-align: center;
 }
@@ -650,8 +676,19 @@ main {
   text-align: center;
 }
 .row {
-  height: 100%;
   padding: 2rem;
+}
+@media (max-width:700px) {
+  .row {
+    padding: .5rem;
+  }
+  .modal__container {
+    width: 95%;
+    height: 100%;
+  }
+  .thT {
+    font-size: 10px;
+  }
 }
 
 /* FIN MODAL SIMULADOR  */
