--- a/public/css/mainClient.css
+++ b/public/css/mainClient.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap');
 /* 
@@ -107,7 +107,6 @@ nav {
   width: 100%;
   background-color: #fff;
   padding: 5px;
-  z-index: 1;
 }
 nav:after{
   content: '';
@@ -203,7 +202,7 @@ ul li:hover ul {
   margin: auto;
 }
 ul li ul li a {
-  padding: 10px 20px;
+  padding: 10px 10px;
   line-height: unset;
   margin-left: .5rem;
   white-space: nowrap;
@@ -692,5 +691,138 @@ main {
     font-size: 10px;
   }
 }
-
 /* FIN MODAL SIMULADOR  */
+
+/* CONFIGURACION */
+.contenedores {
+  display: grid;
+  grid-template-columns: 20% 80%;
+
+  width: 80%;
+  height: 500px;
+  margin: auto;
+  border: solid 1px #d1d7dc; 
+}
+.c1{
+  border-right: solid 1px #d1d7dc;
+}
+.contenedor-foto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  row-gap: .7rem;
+  margin-top: 1rem;
+}
+.contenedor-foto h1 {
+  font-family: Roboto;
+  font-size: 20px;
+  text-align: justify;
+  font-weight: 400;
+}
+.editarFoto {
+  width: 60%;
+
+}
+.subirFoto {
+  border: solid 1px #1c1d1f;
+  padding: .3rem 1.3rem;
+  transition: all .3s;
+}
+.subirFoto:hover {
+  color: #fff;
+  background-color: #1c1d1f;
+}
+
+.opciones {  
+  border-top: solid 1px #d1d7dc;
+  margin-top: 1rem;
+}
+.opciones ul {
+  padding-left: 0px;
+}
+.opc, .opc_CerrarCuenta{
+  color: #000;
+  text-decoration: none;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-left: 10px;
+  transition: all .2s;
+  cursor: pointer;
+}
+.opc:hover {
+  background-color: #6a6f73;
+  color: #fff;
+}
+.check {
+  background-color: #6a6f73;
+  color: #fff;
+}
+
+.opc_CerrarCuenta:hover {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.c2 {
+  display: grid;
+  grid-template-rows: 100px auto;
+  width: 100%;
+  height: auto;
+}
+.c2-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid 1px #d1d7dc;
+}
+.opcionTitulo {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 30px;
+}
+.informacionGeneral {
+  width: 70%;
+  height: 100%;
+  margin: auto;
+  padding: 1rem;
+}
+.informacionGeneral p {
+  margin-bottom: 10px;
+  font-family: 'Roboto';
+  font-size: 17px;
+  font-weight: 700;
+}
+
+.editInfo {
+  width: 100%;
+  padding: .5rem;  
+  border: solid 1px #1c1d1f;
+  outline: none;
+  margin: .5rem 0;
+}
+.colums {
+  display: flex;
+  column-gap: 1rem;
+}
+.colums1 {
+  display: grid;
+  column-gap: 1rem;
+  grid-template-columns: repeat(2,auto);
+}
+.actuInfo {
+  margin-top: 20px;
+  border: solid 1px #1c1d1f;
+  background-color: #1c1d1f;
+  color: #fff;
+  padding: .5rem 1.3rem;
+  transition: all .3s;
+}
+.actuInfo:hover {
+  background-color: #fff;
+  border: solid 1px #1c1d1f;
+  color: #000;
+}
