--- a/public/css/mainEjecutive.css
+++ b/public/css/mainEjecutive.css
@@ -617,6 +617,14 @@ main .lineaR {
   transition: all .5s;
   cursor: pointer;
 }
+.pagado {
+  background-color: #09aa00;
+  color: #fff;
+  padding: 10px 25px;
+  border-radius: 5px;
+  transition: all .5s;
+  cursor: pointer;
+}
 .aprobado {
   border: solid 2px #27a644;
   padding: 5px;
