--- a/public/css/mainClient.css
+++ b/public/css/mainClient.css
@@ -314,6 +314,12 @@ main {
     font-family: 'Roboto';
     font-size: 20px;
 }
+.deposito {
+  color: #27a644;
+}
+.retiro {
+  color:#f15759;
+}
 .panel1 h1::after {
     content: '';
     width: 100%;
@@ -737,6 +743,12 @@ main {
   row-gap: .7rem;
   margin-top: 1rem;
 }
+.contenedor-foto .form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .contenedor-foto h1 {
   font-family: Roboto;
   font-size: 20px;
@@ -745,7 +757,6 @@ main {
 }
 .editarFoto {
   width: 60%;
-  margin-left: 2.5rem;
 }
 /*SUBIR IMAGEN*/
 .inputfile {
@@ -767,6 +778,7 @@ main {
   display: inline-block;
   overflow: hidden;
   padding: 0.625rem 1.25rem;    
+  color: #393939;
 }
 
 .inputfile:focus + label,
@@ -777,7 +789,6 @@ main {
 .subirFoto {
   border: solid 1px #1c1d1f;
   padding: .3rem 1.3rem;
-  margin-left: 2rem;
   transition: all .3s;
 }
 .subirFoto:hover {
