--- a/public/css/mainClient.css
+++ b/public/css/mainClient.css
@@ -214,6 +214,7 @@ ul li ul li i {
 
 .profilePhoto {
   width: 30px;
+  height: 30px;
   border-radius: 100%;
 }
 .linea {
@@ -450,7 +451,7 @@ main {
 }
 .info button {
     display: inline-block;
-    
+    cursor: pointer;
     color: #dc3545;
 }
 .pagar {
@@ -603,12 +604,13 @@ main {
   display: grid;
   justify-content: center;
   align-items: center;
-  color: #000;
+  color: #48393c;
   font-family: 'Roboto';
   font-size: 18px;
   text-align: center;
   border-radius: 10px;
   padding: .5rem;
+  margin:0;
 }
 /* MODAL SIMULADOR  */
 
@@ -761,7 +763,10 @@ main {
   font-weight: 400;
 }
 .editarFoto {
-  width: 60%;
+  width: 130px;
+  height: 130px;
+  border-radius: 100%;
+  border: solid 3px #6a6f73;
 }
 /*SUBIR IMAGEN*/
 .inputfile {
@@ -831,7 +836,12 @@ main {
   background-color: #dc3545;
   color: #fff;
 }
-
+.contenedores span {
+  color: #2d2d2d;
+  border: solid 1px #2d2d2d;
+  padding: 2px 5px;
+  transition: all .2s;
+}
 .c2 {
   display: grid;
   grid-template-rows: 100px auto;
@@ -897,6 +907,10 @@ main {
   border: solid 1px #1c1d1f;
   color: #000;
 }
+.contenedor-foto span:hover {
+  color: #fff;
+  background-color: #1c1d1f;
+}
 
 @media (max-width: 700px) {
   .contenedores {
@@ -925,5 +939,74 @@ main {
 .prestamos:link, .prestamos:visited, .prestamos:active {
   color: #fd5b5a;
 
+}
+
+/* CSS */
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: rgb(90, 78, 78);
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-weight: bold;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ffe087,
+    #fa4848,
+    #d9d9d9,
+    #ffe087,
+    #fa4848,
+    #d9d9d9,
+    #ffe087,
+    #fa4848,
+    #d9d9d9
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #fc003caf;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
 
