--- a/public/css/mainEjecutive.css
+++ b/public/css/mainEjecutive.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500;700&display=swap');
 /* 
   Reset CSS 
 */
@@ -281,10 +281,10 @@ main{
     text-align: center;
 }
 main h1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rajdhani', sans-serif;
     color: #ffff;
-    font-weight: 900;
-    font-size: 25px;
+    font-weight: 700;
+    font-size: 35px;
 }
 main .lineaR {
     border: 1px solid #FC003C;
@@ -317,16 +317,12 @@ main .lineaR {
 }
 .contenedor-btn-file {
     display: inline-block;
-    position: relative;
-    background: linear-gradient(90deg, rgba(32,35,109,1) 0%, rgba(252,0,60,1) 100%);
+    background: #198754;
     color: #fff;
-    border: 0;
-    padding: 10px;
-    border-radius: 30px;
-    box-shadow: 0 0 12px rgba(0, 0, 0, .15);
+    border-bottom: solid 3px #186843;
+    padding: 15px 50px;
+    border-radius: 10px;
     overflow: hidden;
-    transition: ease-out 120ms background-color;
-    margin-top: 20px;
     cursor: pointer;
 }
 .contenedor-btn-file label {
@@ -356,8 +352,8 @@ main .lineaR {
 .labels {
     font-size: 20px;
     color: #ffff;
-    font-family: 'Roboto';
-    font-weight: 900;
+    font-family: 'Rajdhani',Arial, Helvetica, sans-serif;
+    font-weight: 700;
     margin-bottom: 10px;
 }
 .inputs {
@@ -536,6 +532,7 @@ main .lineaR {
   padding: 5px;
   border-radius: 5px;
   color: #ffd969;
+  cursor: pointer;
   transition: all .5s;
 }
 .editar:hover {
@@ -548,7 +545,9 @@ main .lineaR {
   border-radius: 5px;
   color: #27a644;
   transition: all .5s;
+  cursor: pointer;
 }
+
 .reactivar:hover {
   background-color: #27a644;
   color: #fff;
@@ -560,6 +559,7 @@ main .lineaR {
   border-radius: 5px;
   color: #d8514b;
   transition: all .5s;
+  cursor: pointer;
 }
 .eliminar:hover {
   background-color: #d8514b;
@@ -571,6 +571,7 @@ main .lineaR {
   border-radius: 5px;
   color: #adabab;
   transition: all .5s;
+  cursor: pointer;
 }
 .info:hover {
   background-color: #adabab;
@@ -599,10 +600,16 @@ main .lineaR {
 }
 .info_modal {
   background-color: #27a644;
+  border: solid 2px #27a644;
   color: #fff;
   padding: 15px;
   border-radius: 5px;
   cursor: pointer;
+  transition: all .3s;
+}
+.info_modal:hover {
+  background-color: #00000057;
+  color: #27a644;
 }
 .L {
   grid-column: 1/3;
@@ -695,8 +702,8 @@ main .lineaR {
   font-size: 20px;
 }
 #depositar {
-  background-color: #27a644;
-  padding: 15px;
+  background-color: #198754;
+  padding: 10px 15px;
   margin: 10px auto;
   color: #fff;
   border-radius: 10px;
@@ -706,8 +713,8 @@ main .lineaR {
   cursor: pointer;
 }
 #retirar {
-  background-color: #e63821;
-  padding: 15px;
+  background-color: #dc3545;
+  padding: 10px 15px;
   margin: 10px auto;
   color: #fff;
   border-radius: 10px;
